expert info all done

--- a/AI/expert.html
+++ b/AI/expert.html
@@ -62,8 +62,21 @@ sycamore = new node("SYCAMORE", true, true);
 oak = new node("OAK", true, true);
 cottonwood = new node("COTTONWOOD", true, true);
 dogwood = new node("PACIFIC DOGWOOD", true, true);
+birch = new node("BIRCH", true, true);
+alder = new node("ALDER", true ,true);
+eucalyptus = new node("EUCALYPTUS", true, true);
+laurel = new node("LAUREL OR BAY", true, true);
+madrone = new node("MADRONE", true, true);
+mahogany = new node("MAHOGANY", true, true);
+willow = new node("WILLOW", true, true);
 
-edge = new node("");
+not_smelly = new node("Is the bark smooth and red-brown?", madrone, mahogany);
+smelly = new node("Is the leaf light-green, with a sharp tip?", eucalyptus, laurel)
+smooth = new node("Do the leaves have a strong smell?", smelly, not_smelly);
+bark = new node("Is the bark white?", birch, alder);
+vein_edge = new node("Is the leaf longer than two inches?", bark, birch);
+teeth = new node("Look on the underside of the leaf, do the veins go all the way to the edge of the leaf?", vein_edge, willow);
+edge = new node("Are the edges of the leaf serated?", teeth, smooth);
 pairs_again = new node("On the branch, do the leaves grow from opposite sides?", dogwood, edge);
 stems = new node("Is the stem more than an inch in length?", cottonwood , pairs_again);
 lobes = new node("Does the leaf have lobes?", oak, stems);
